--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/logo.png" rel="icon" />
+    <link href="assets/img/logo.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect" />
@@ -51,7 +51,7 @@
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
       <ul class="sidebar-nav" id="sidebar-nav">
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link collapsed" href="index.html">
             <i class="bi bi-grid"></i>
             <span>Dashboard</span>
@@ -126,7 +126,7 @@
                 class="nav nav-pills mb-3 mt-4 gap-3"
                 id="pills-tab"
                 role="tablist">
-                <li class="nav-item" role="presentation">
+                <li class="nav-item " role="presentation">
                   <button
                     class="nav-link active"
                     id="pills-data-mwcnu-tab"
@@ -184,7 +184,7 @@
                 </li>
               </ul>
 
-              <div class="card bg-primary">
+              <div class="card bg-success">
                 <div class="card-body text-light text-center mt-3">
                   Silahkan isi atau lengkapi data dibawah ini
                 </div>
@@ -299,7 +299,7 @@
                           id="input-kabupaten"
                           required
                           accept="application/pdf" />
-                        <span class="badge bg-primary">
+                        <span class="badge bg-success">
                           File harus berupa PDF
                         </span>
                       </div>
@@ -315,14 +315,14 @@
                           id="input-kecamatan"
                           required
                           accept="application/pdf" />
-                        <span class="badge bg-primary">
+                        <span class="badge bg-success">
                           File harus berupa PDF
                         </span>
                       </div>
                     </div>
                     <div class="row g-3 pt-4 mt-4 mb-4">
                       <div class="text-end">
-                        <button type="submit" class="btn btn-primary col-md-3">
+                        <button type="submit" class="btn btn-success col-md-3">
                           <i class="ri-file-edit-line"></i>
                           Perbaharui data MWCNU
                         </button>
@@ -398,7 +398,7 @@
                           id="input-ktp"
                           required
                           accept="application/pdf" />
-                        <span class="badge bg-primary">
+                        <span class="badge bg-success">
                           File harus berupa PDF
                         </span>
                       </div>
@@ -420,7 +420,7 @@
                     </div>
                     <div class="row g-3 pt-4 mt-4 mb-4">
                       <div class="text-end">
-                        <button type="submit" class="btn btn-primary col-md-3">
+                        <button type="submit" class="btn btn-success col-md-3">
                           <i class="ri-file-edit-line"></i>
                           Perbaharui data MWCNU
                         </button>
@@ -490,7 +490,7 @@
                     </div>
                     <div class="row g-3 pt-4 mt-4 mb-4">
                       <div class="text-end">
-                        <button type="submit" class="btn btn-primary col-md-3">
+                        <button type="submit" class="btn btn-success col-md-3">
                           <i class="ri-file-edit-line"></i>
                           Perbaharui data MWCNU
                         </button>
@@ -510,7 +510,7 @@
                     <div class="text-end">
                       <button
                         type="button"
-                        class="btn btn-outline-primary"
+                        class="btn btn-outline-success"
                         data-bs-toggle="modal"
                         data-bs-target="#verticalycentered">
                         <i class="ri-file-edit-line"></i>
@@ -612,7 +612,7 @@
                                         id="input-file-surat"
                                         required />
                                       <span
-                                        class="badge bg-primary d-flex justify-content-start">
+                                        class="badge bg-success d-flex justify-content-start">
                                         File harus berupa PDF
                                       </span>
                                     </div>
@@ -623,7 +623,7 @@
                             <div class="modal-footer">
                               <button
                                 type="submit"
-                                class="btn btn-primary"
+                                class="btn btn-success"
                                 data-bs-dismiss="modal">
                                 <i class="ri-file-edit-line"></i>
                                 Simpan data
@@ -662,7 +662,7 @@
 
                   <div class="row g-3 pt-4 mt-4 mb-4">
                     <div class="text-end">
-                      <button type="submit" class="btn btn-primary col-md-3">
+                      <button type="submit" class="btn btn-success col-md-3">
                         <i class="ri-file-edit-line"></i>
                         Perbaharui data MWCNU
                       </button>
