create generate-file.html and fix fiture

--- a/detail-hibah.html
+++ b/detail-hibah.html
@@ -66,6 +66,12 @@
           </a>
         </li>
         <!-- End Hibah Nav -->
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="generate-file.html">
+            <i class="bi bi-printer-fill"></i>
+            <span>Cetak file</span>
+          </a>
+        </li>
       </ul>
     </aside>
     <!-- End Sidebar-->
@@ -122,16 +128,6 @@
                   <tr>
                     <td scope="col">Jumlah</td>
                     <td>Rp. 10.000.000.-</td>
-                  </tr>
-                  <tr>
-                    <td scope="col">Status</td>
-                    <td>
-                      <button type="button" class="btn btn-light">
-                        <span class="badge text-primary">
-                          Menunggu Pengisian
-                        </span>
-                      </button>
-                    </td>
                   </tr>
                 </tbody>
               </table>
