--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
           </a>
         </li>
         <!-- End Hibah Nav -->
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="generate-file.html">
+            <i class="bi bi-printer-fill"></i>
+            <span>Cetak file</span>
+          </a>
+        </li>
+        <!-- End Generate File Nav -->
       </ul>
     </aside>
     <!-- End Sidebar-->
